2008-10-31  Sven Neumann  <sven@gimp.org>

	* app/text/gimpfont.c
	* app/text/gimpfontlist.c: render font previews using PangoCairo.

2008-10-31  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped minimum required version of Cairo to 1.6.4.

	* app/core/gimpscanconvert.c: use cairo_format_stride_for_width().

2008-10-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c
	(gimp_operation_point_layer_mode_process): Formating,
	simplification and fixed operator precedence for the seed (not
	that it matters much).

2008-10-31  Martin Nordholts  <martinn@svn.gnome.org>

	* app/gegl/gimpoperationpointlayermode.c
	(gimp_operation_point_layer_mode_process): The GEGL API actually
	allows us to handle the Dissolve layer mode as a point op. The
	GEGL implementation of Dissolve uses a faster implementation for
	deterministic behavior than the legacy Dissolve implementation.
	The end result should be identical (although not on the
	pixel-level).

	Completely works the same:
	 o Dissolve

2008-10-31  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptexttool.c (gimp_text_tool_key_press): bail out
	instead of crashing if the tool has no display.

	(gimp_text_tool_draw)
	(gimp_text_tool_draw_preedit)
	(gimp_text_tool_draw_selection)
	(gimp_text_tool_xy_to_offset): need to adjust all drawing and
	event coordinates by a possible negative offset between logical
	rectangle and ink rectangle (if the ink rectangle is larger than
	the logical one).

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): continue normally if
	tool_manager_key_press_active() returns FALSE.

2008-10-30  Sven Neumann  <sven@gimp.org>

	* app/text/gimp-fonts.c
	* app/text/gimpfont-utils.c: removed unused includes.

2008-10-30  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptexttool.c: remove lots of unused variables,
	apparently my builds were without proper warnings for some time.
	Some formatting cleanup and code reordering.
